Add compiler plugin